--- a/public/index.html
+++ b/public/index.html
@@ -15,15 +15,13 @@
 
 <body>
     <noscript>
-        <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without
-            JavaScript enabled. Please enable it to continue.</strong>
-        </noscript>
+                <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly
+                        without
+                        JavaScript enabled. Please enable it to continue.</strong>
+                </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <% if (NODE_ENV === 'development') {%>
-        <script src="//app.storyblok.com/f/storyblok-latest.js?t=<%= VUE_APP_TOKEN %>" type="text/javascript">
-        </script>
-        <% } %>
+
 </body>
 
 </html>
